# area-calculator

./: pyproject.toml
.github/workflows/: python-ci.yml
src/area_calculator/: main.py  shape_calculator.py
tests/: shape_calculator_test.py
